Fix alignment of icons

--- a/paillette/static/style.css
+++ b/paillette/static/style.css
@@ -671,6 +671,7 @@ label,
 }
 
 #page-spectacles a dl dt {
+  clear: left;
   float: left;
   width: 10%;
 }
